--- a/css/VendingMenuStyle.css
+++ b/css/VendingMenuStyle.css
@@ -1,3 +1,9 @@
+html, body {
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  height: 99%;
+}
 body{
   background-image: url('../images/VendingMachine-BG.png');
   background-repeat: no-repeat;
@@ -40,10 +46,21 @@ body{
 	cursor: pointer;
 }
 #cancel_button{
-  position: absolute;
-  right: 6%;
   bottom: 10px;
   border: 10px solid red;
   background: rgba(255, 0, 20, .2);
 }
-
+#categories_prompt {
+  color: white;
+  font-size: 64px;
+  width: 60%;
+}
+#categoriesWidget {
+  position: fixed; 
+  top: 0;          
+  left: 0;         
+  width: 100%;     
+  height: 100%;    
+  border: none;    
+  z-index: 1000;
+}
