--- a/css/touchscreen.css
+++ b/css/touchscreen.css
@@ -60,12 +60,12 @@ footer{
 }
 #total_price{
   float: left;
-  width: 50%;
+  width: 30%;
   height: 100%;
 }
 #confirm{
   float: left;
-  width: 40%;
+  width: 50%;
   height: 100%;
 }
 #cancel{
@@ -75,11 +75,13 @@ footer{
 }
 #price_label{
   height: 100%;
-  font-size: 100px;
+  font-size: 50px;
+  font-weight: bold;
+  color: white;
 }
-#buttons{
+#confButton{
   height: 80%;
-  width: 30%;
+  width: 80%;
   margin-top: 10px;
   margin-right: 15px;
   font-size: 50px;
@@ -93,7 +95,7 @@ footer{
   margin-right: 2%;
   margin-left: 2%;
 }
-#menu {
+#openVendingMenu {
   height: 100%;
   width: 5%;
   margin-top: 0px;
@@ -113,3 +115,13 @@ p{
   margin: 0;
   padding: 0;
 }
+#vendingMenuWidget {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  border: none;
+  z-index: 1000;
+}
+
