--- a/css/touchscreen.css
+++ b/css/touchscreen.css
@@ -11,10 +11,10 @@ body {
   background-size: cover;
 }
 #touchscreen{
-  margin-left: 6%;
-  margin-right: 5%;
-  width: 90%;
-  height: 100%;
+  margin-left: 11%;
+  margin-right: 4%;
+  width: 88%;
+  height: 98%;
   position: relative;
 }
 header{
@@ -42,8 +42,8 @@ header{
   align-items: center;
 }
 .images{
-  width: 100px;
-  height:100px;
+  width: 120px;
+  height: 120px;
   float: left;
 }
 .item_name{
@@ -107,12 +107,13 @@ footer{
 }
 #openVendingMenu {
   height: 100%;
-  width: 5%;
+  width: 10%;
   margin-top: 0px;
   position: fixed;
   top: 0;
   left: 0;
-  font-size: 50px;
+  font-family:Comic Sans MS, cursive, sans-serif;
+  font-size: 120px;
   font-weight: bold;
   background: rgba(51, 170, 51, .3);
   border: 5px solid white;
